--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-download-link": "^2.3.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1"
   },
