--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": "http://meltammy.github.io",
   "name": "portfolio",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -9,12 +9,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "node-sass": "^4.14.1",
+    "firebase": "^8.6.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-download-link": "^2.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.1.1"
+    "sass": "^1.34.1",
+    "styled-components": "^5.1.1",
+    "surge": "^0.23.0"
   },
   "scripts": {
     "predeploy": "npm run build",
